// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRadio.ts should not render aria-label attribute with no label value on input group 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <input aria-checked="false"
           id="input-4"
           role="radio"
           type="radio"
           value
    >
    <div class="v-input--selection-controls__ripple">
    </div>
    <i aria-hidden="true"
       class="v-icon notranslate material-icons theme--light"
    >
      $radioOff
    </i>
  </div>
</div>
`;

exports[`VRadio.ts should render proper input name 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <input aria-checked="false"
           id="input-7"
           role="radio"
           type="radio"
           name="name"
           value
    >
    <div class="v-input--selection-controls__ripple">
    </div>
    <i aria-hidden="true"
       class="v-icon notranslate material-icons theme--light"
    >
      $radioOff
    </i>
  </div>
</div>
`;

exports[`VRadio.ts should render role and aria-checked attributes on input group 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <input aria-checked="true"
           id="input-1"
           role="radio"
           type="radio"
           value
    >
    <div class="v-input--selection-controls__ripple accent--text">
    </div>
    <i aria-hidden="true"
       class="v-icon notranslate material-icons theme--light accent--text"
    >
      $radioOn
    </i>
  </div>
</div>
`;

exports[`VRadio.ts should use custom icons 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <input aria-checked="false"
           id="input-16"
           role="radio"
           type="radio"
           value
    >
    <div class="v-input--selection-controls__ripple">
    </div>
    <i aria-hidden="true"
       class="v-icon notranslate material-icons theme--light"
    >
      bar
    </i>
  </div>
</div>
`;

exports[`VRadio.ts should use custom icons 2`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <input aria-checked="true"
           id="input-16"
           role="radio"
           type="radio"
           value
    >
    <div class="v-input--selection-controls__ripple accent--text">
    </div>
    <i aria-hidden="true"
       class="v-icon notranslate material-icons theme--light accent--text"
    >
      foo
    </i>
  </div>
</div>
`;
